--- a/frontend/src/app/view/protected-resource/protected-resource.component.html
+++ b/frontend/src/app/view/protected-resource/protected-resource.component.html
@@ -1,5 +1,13 @@
-<div>
-  <h1>Hello {{user?.firstName}}!</h1>
-  <p>{{message}}</p>
-  <a routerLink="/logout">Logout</a>
+<div class="protected-wrapper">
+    <mat-tab-group>
+        <mat-tab label="One">
+            <h1>Hello {{user?.firstName}}!</h1>
+            <p>{{message}}</p>
+            <a routerLink="/logout">Logout</a>
+        </mat-tab>
+        <mat-tab label="Two">
+            <h1>Some more tab content</h1>
+            <p>...</p>
+        </mat-tab>
+    </mat-tab-group>
 </div>
