--- a/frontend/src/app/view/register/register.component.html
+++ b/frontend/src/app/view/register/register.component.html
@@ -1,49 +1,91 @@
-<form [formGroup]="registrationForm" (ngSubmit)="register()">
-  {{registrationForm?.value | json}}
-  <hr/>
-  <div [ngClass]="{'has-error': isSubmitted && rf.username.errors }">
-    <label>Username:<input formControlName="username"></label>
-  </div>
-  <div *ngIf="isSubmitted && rf.username.errors">
-    <p *ngIf="rf.username.errors.email">Insert valid e-mail.</p>
-    <p *ngIf="rf.username.errors.required">Username is required.</p>
-  </div>
-
-  <div [ngClass]="{'has-error': isSubmitted && rf.password.errors }">
-    <label>Password<input type="password" formControlName="password"></label>
-  </div>
-  <div *ngIf="isSubmitted && rf.password.errors">
-    <p *ngIf="rf.password.errors.minlength">Password must be at least 4 characters long.</p>
-    <p *ngIf="rf.password.errors.required">Password is required.</p>
-  </div>
-
-  <div [ngClass]="{'has-error': isSubmitted && rf.confirmPassword.errors }">
-    <label>Confirm Password<input type="password" formControlName="confirmPassword"></label>
-  </div>
-  <div *ngIf="isSubmitted && rf.confirmPassword.errors">
-    <p *ngIf="rf.confirmPassword.errors.required">Password confirmation is required.</p>
-    <p *ngIf="rf.confirmPassword.errors.mustMatch">Passwords must match.</p>
-  </div>
-
-  <div [ngClass]="{'has-error': isSubmitted && rf.firstName.errors }">
-    <label>First Name<input formControlName="firstName"></label>
-  </div>
-  <div *ngIf="isSubmitted && rf.firstName.errors">
-    <p *ngIf="rf.firstName.errors.minlength">First name must be at least 3 characters long.</p>
-    <p *ngIf="rf.firstName.errors.required">First name is required.</p>
-  </div>
-
-  <div [ngClass]="{'has-error': isSubmitted && rf.lastName.errors }">
-    <label>Last Name<input formControlName="lastName"></label>
-  </div>
-  <div *ngIf="isSubmitted && rf.lastName.errors">
-    <p *ngIf="rf.lastName.errors.minlength">Last name must be at least 3 characters long.</p>
-    <p *ngIf="rf.lastName.errors.required">Last name is required.</p>
-  </div>
-
-  <button type="submit">Register</button>
-  <button type="reset" (click)="reset()">Reset</button>
-</form>
-<div *ngIf="message != null">{{message}}</div>
-<br>
-<a routerLink="/login">Login</a>
+<div class="register-wrapper">
+    <form [formGroup]="registrationForm" (submit)="register()">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>
+                    Register
+                </mat-card-title>
+                <mat-card-subtitle>
+                    Fill out the form to create a new account.
+                </mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <mat-list>
+                    <mat-list-item>
+                        <mat-form-field>
+                            <mat-label>Username</mat-label>
+                            <input matInput formControlName="username">
+                            <mat-error *ngIf="isSubmitted && rf.username.errors && rf.username.errors.email">
+                                Insert valid e-mail.
+                            </mat-error>
+                            <mat-error *ngIf="isSubmitted && rf.username.errors && rf.username.errors.required">
+                                Username is required.
+                            </mat-error>
+                        </mat-form-field>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-form-field>
+                            <mat-label>Password</mat-label>
+                            <input matInput type="password" formControlName="password">
+                            <mat-error *ngIf="isSubmitted && rf.password.errors && rf.password.errors.minlength">
+                                Password must be at least 4 characters long.
+                            </mat-error>
+                            <mat-error *ngIf="isSubmitted && rf.password.errors && rf.password.errors.required">
+                                Password is required.
+                            </mat-error>
+                        </mat-form-field>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-form-field>
+                            <mat-label>Confirm Password</mat-label>
+                            <input matInput type="password" formControlName="confirmPassword">
+                            <mat-error
+                                    *ngIf="isSubmitted && rf.confirmPassword.errors && rf.confirmPassword.errors.required">
+                                Password confirmation is required.
+                            </mat-error>
+                            <mat-error
+                                    *ngIf="isSubmitted && rf.confirmPassword.errors && rf.confirmPassword.errors.mustMatch">
+                                Passwords must match.
+                            </mat-error>
+                        </mat-form-field>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-form-field>
+                            <mat-label>First Name</mat-label>
+                            <input matInput formControlName="firstName">
+                            <mat-error *ngIf="isSubmitted && rf.firstName.errors && rf.firstName.errors.minlength">
+                                First name must be at least 3 characters long.
+                            </mat-error>
+                            <mat-error *ngIf="isSubmitted && rf.firstName.errors && rf.firstName.errors.required">
+                                First name is required.
+                            </mat-error>
+                        </mat-form-field>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-form-field>
+                            <mat-label>Last Name</mat-label>
+                            <input matInput formControlName="lastName">
+                            <mat-error *ngIf="isSubmitted && rf.lastName.errors && rf.lastName.errors.minlength">
+                                Last name must be at least 3 characters long.
+                            </mat-error>
+                            <mat-error *ngIf="isSubmitted && rf.lastName.errors && rf.lastName.errors.required">
+                                Last name is required.
+                            </mat-error>
+                        </mat-form-field>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-error *ngIf="message && message.error != null">{{message.error}}</mat-error>
+                        <div *ngIf="message && message.success != null">{{message.success}}</div>
+                    </mat-list-item>
+                </mat-list>
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-raised-button type="submit">Register</button>
+                <button mat-button type="reset" (click)="reset()">Reset</button>
+            </mat-card-actions>
+            <mat-card-footer>
+                <button mat-flat-button routerLink="/login">Login</button>
+            </mat-card-footer>
+        </mat-card>
+    </form>
+</div>
