added more material staff

--- a/frontend/src/app/view/login/login.component.html
+++ b/frontend/src/app/view/login/login.component.html
@@ -35,8 +35,8 @@
                 </mat-list>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-raised-button (click)="login()">Login</button>
-                <button mat-button routerLink="/register">Register</button>
+                <button mat-raised-button color="primary" (click)="login()">Login</button>
+                <button mat-stroked-button color="accent" routerLink="/register">Register</button>
             </mat-card-actions>
         </mat-card>
     </form>
