--- a/frontend/src/app/view/logout/logout.component.html
+++ b/frontend/src/app/view/logout/logout.component.html
@@ -1,3 +1,7 @@
-<div>
-  <button (click)="logout()">Logout</button>
-</div>
+<mat-card>
+    <mat-card-content>
+        <h3 style="text-align: center; padding: 10px">Logging out...</h3>
+
+        <mat-progress-spinner matPrefix style="margin: 0 auto;" mode="indeterminate" [diameter]="40"></mat-progress-spinner>
+    </mat-card-content>
+</mat-card>
