--- a/frontend/src/app/view/protected-resource/protected-resource.component.html
+++ b/frontend/src/app/view/protected-resource/protected-resource.component.html
@@ -1,13 +1,19 @@
-<div class="protected-wrapper">
-    <mat-tab-group>
-        <mat-tab label="One">
-            <h1>Hello {{user?.firstName}}!</h1>
-            <p>{{message}}</p>
-            <a routerLink="/logout">Logout</a>
-        </mat-tab>
-        <mat-tab label="Two">
-            <h1>Some more tab content</h1>
-            <p>...</p>
-        </mat-tab>
-    </mat-tab-group>
-</div>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title-group>
+            <mat-card-title>Hello {{user?.username}}!</mat-card-title>
+            <mat-card-subtitle>{{user?.uuid}}</mat-card-subtitle>
+        </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        <mat-list dense>
+            <mat-list-item>{{user?.username}}</mat-list-item>
+            <mat-list-item>{{user?.firstName}}</mat-list-item>
+            <mat-list-item>{{user?.lastName}}</mat-list-item>
+            <mat-list-item>{{user?.uuid}}</mat-list-item>
+        </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-raised-button color="primary" routerLink="/logout">Logout</button>
+    </mat-card-actions>
+</mat-card>
