--- a/frontend/src/app/view/register/register.component.html
+++ b/frontend/src/app/view/register/register.component.html
@@ -80,12 +80,10 @@
                 </mat-list>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-raised-button type="submit">Register</button>
-                <button mat-button type="reset" (click)="reset()">Reset</button>
+                <button mat-raised-button color="primary" type="submit">Register</button>
+                <button mat-raised-button color="accent" type="reset" (click)="reset()">Reset</button>
+                <button mat-raised-button color="warn" routerLink="/login">Cancel</button>
             </mat-card-actions>
-            <mat-card-footer>
-                <button mat-flat-button routerLink="/login">Login</button>
-            </mat-card-footer>
         </mat-card>
     </form>
 </div>
