--- a/frontend/src/app/view/protected-resource/protected-resource.component.html
+++ b/frontend/src/app/view/protected-resource/protected-resource.component.html
@@ -15,5 +15,6 @@
     </mat-card-content>
     <mat-card-actions>
         <button mat-raised-button color="primary" routerLink="/logout">Logout</button>
+        <button mat-raised-button color="primary" routerLink="/user-list">Users</button>
     </mat-card-actions>
 </mat-card>
